# backend-event-manager-app

./: .env.example  .gitlab-ci.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  dependencies.py  exceptions.py  schemas.py
app/api/auth/: auth.py
app/api/category/: category.py
app/api/events/: events.py
app/api/locations/: locations.py
app/api/users/: users.py
app/config/: __init__.py
app/db/migrations/server/: 4_20260110203737_None.py
app/db/models/: __init__.py  abstract_model.py  category.py  event.py  location.py  user.py
app/models/: auth.py  category.py  event.py  location.py  user.py
app/server/: server.py
app/services/: auth.py  category.py  event.py  location.py
tests/test_server/: conftest.py  test_api_simple.py  test_auth.py  test_categories.py  test_events.py  test_locations.py  test_model_fix.py  test_server.py  test_users.py
